@@ -16,10 +16,17 @@ import java.util.Properties;
 import java.util.Set;
 import java.util.regex.Pattern;
 
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
+
+import de.ids_mannheim.korap.encryption.RandomCodeGenerator;
 import de.ids_mannheim.korap.util.KrillProperties;
 import de.ids_mannheim.korap.utils.TimeUtils;
 import lombok.Getter;
 import lombok.Setter;
+import net.sf.ehcache.Cache;
+import net.sf.ehcache.CacheManager;
+import net.sf.ehcache.config.CacheConfiguration;
 
 /**
  * Describes configuration for Kustvakt by importing properties 
@@ -37,6 +44,8 @@ import lombok.Setter;
 @Getter
 public class KustvaktConfiguration {
 
+	private Logger log = LogManager.getLogger(KustvaktConfiguration.class);
+	
     public static final Map<String, Object> KUSTVAKT_USER = new HashMap<>();
 
     private String vcInCaching;
@@ -203,6 +212,13 @@ public class KustvaktConfiguration {
                 properties.getProperty("security.tokenTTL", "72H"));
         shortTokenTTL = TimeUtils.convertTimeToSeconds(
                 properties.getProperty("security.shortTokenTTL", "3H"));
+        
+        Cache cache = CacheManager.newInstance().getCache("named_vc");
+        CacheConfiguration config = cache.getCacheConfiguration();
+        config.setMaxBytesLocalHeap(properties.getProperty("cache.max.bytes.local.heap", "256m"));
+        config.setMaxBytesLocalDisk(properties.getProperty("cache.max.bytes.local.disk", "2G"));
+        log.info("max local heap:"+config.getMaxBytesLocalHeapAsString());
+        log.info("max local disk:"+config.getMaxBytesLocalDiskAsString());
     }
     
     @Deprecated
